--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "description": "A quick CLI tool to help hotswap your machine by backing up your local setup.",
   "version": "0.0.0",
   "author": "Manu Phatak @manuphatak",
+  "license": "MIT",
+  "main": "lib/index.js",
+  "repository": "manuphatak/backpack",
+  "types": "lib/index.d.ts",
   "bin": {
     "backpack": "./bin/run"
   },
@@ -23,9 +27,13 @@
     "eslint": "^5.13",
     "eslint-config-oclif": "^3.1",
     "eslint-config-oclif-typescript": "^0.1",
+    "eslint-config-prettier": "8.1.0",
     "globby": "^10",
+    "husky": "5.1.1",
     "mocha": "^5",
     "nyc": "^14",
+    "prettier": "2.2.1",
+    "pretty-quick": "3.1.0",
     "ts-node": "^8",
     "typescript": "^3.3"
   },
@@ -42,8 +50,6 @@
   "keywords": [
     "oclif"
   ],
-  "license": "MIT",
-  "main": "lib/index.js",
   "oclif": {
     "commands": "./lib/commands",
     "bin": "backpack",
@@ -51,13 +57,16 @@
       "@oclif/plugin-help"
     ]
   },
-  "repository": "manuphatak/backpack",
   "scripts": {
     "postpack": "rm -f oclif.manifest.json",
     "posttest": "eslint . --ext .ts --config .eslintrc",
-    "prepack": "rm -rf lib && tsc -b && oclif-dev manifest && oclif-dev readme",
-    "test": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\"",
-    "version": "oclif-dev readme && git add README.md"
+    "prepack": "rm -rf lib && tsc -b && oclif-dev manifest && oclif-dev readme && prettier --write README.md",
+    "test": "COLUMNS=80 nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\"",
+    "version": "oclif-dev readme && prettier --write README.md && git add README.md && git commit --allow-empty -m 'Update README.md [skip ci]'"
   },
-  "types": "lib/index.d.ts"
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  }
 }
