chore: Add commitlint

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "tslib": "^1"
   },
   "devDependencies": {
+    "@commitlint/cli": "12.0.1",
+    "@commitlint/config-conventional": "12.0.1",
     "@oclif/dev-cli": "^1",
     "@oclif/test": "^1",
     "@types/chai": "^4",
@@ -68,7 +70,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged"
+      "pre-commit": "pretty-quick --staged",
+      "commit-msg": "yarn commitlint --edit"
     }
   },
   "config": {
