--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "husky": "5.1.1",
     "mocha": "^5",
     "nyc": "^14",
+    "pinst": "2.1.6",
     "prettier": "2.2.1",
     "pretty-quick": "3.1.0",
     "ts-node": "^8",
@@ -66,13 +67,10 @@
     "posttest": "eslint . --ext .ts --config .eslintrc",
     "prepack": "rm -rf lib && tsc -b && oclif-dev manifest && oclif-dev readme && prettier --write README.md",
     "test": "COLUMNS=80 nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\"",
-    "version": "oclif-dev readme && prettier --write README.md && git add README.md && git commit --allow-empty -m 'chore: Update README.md [skip ci]'"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged",
-      "commit-msg": "yarn commitlint --edit"
-    }
+    "version": "oclif-dev readme && prettier --write README.md && git add README.md && git commit --allow-empty -m 'chore: Update README.md [skip ci]'",
+    "postinstall": "husky install",
+    "prepublishOnly": "pinst --disable",
+    "postpublish": "pinst --enable"
   },
   "config": {
     "commitizen": {
