--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ jobs:
 
 workflows:
   version: 2
-  "@manuphatak/backpack":
+  build-test-release:
     jobs:
       - node-latest
       - node-12
