--- a/.github/workflows/build-test-release.yml
+++ b/.github/workflows/build-test-release.yml
@@ -19,6 +19,17 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      - uses: actions/cache@v2
+        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
       - run: yarn install
       - run: ./bin/run --version
       - run: ./bin/run --help
@@ -30,7 +41,7 @@ jobs:
           files: coverage.lcov
           fail_ci_if_error: true
           env_vars: ${{ matrix.node-version }}
-      - run: rm coverage.lcov
+          move_coverage_to_trash: true
       - name: Release
         if: ${{ startsWith(matrix.node-version, '14' ) }}
         env:
