--- a/.github/workflows/build-test-release.yml
+++ b/.github/workflows/build-test-release.yml
@@ -1,6 +1,10 @@
 ---
 name: build-test-release
 on:
+  push:
+    branches: [main]
+    paths-ignore:
+      - "**.md"
   pull_request:
     paths-ignore:
       - "**.md"
