--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   },
   "bugs": "https://github.com/manuphatak/backpack-cli/issues",
   "dependencies": {
-    "@oclif/command": "^1",
-    "@oclif/config": "^1",
-    "@oclif/plugin-help": "^3",
-    "tslib": "^1"
+    "@oclif/command": "1",
+    "@oclif/config": "1",
+    "@oclif/plugin-help": "3",
+    "tslib": "2.1.0"
   },
   "devDependencies": {
     "@auto-it/all-contributors": "10.16.8",
@@ -23,28 +23,28 @@
     "@auto-it/first-time-contributor": "10.16.8",
     "@commitlint/cli": "12.0.1",
     "@commitlint/config-conventional": "12.0.1",
-    "@oclif/dev-cli": "^1",
-    "@oclif/test": "^1",
-    "@types/chai": "^4",
-    "@types/mocha": "^5",
-    "@types/node": "^10",
+    "@oclif/dev-cli": "1",
+    "@oclif/test": "1",
+    "@types/chai": "4",
+    "@types/mocha": "5",
+    "@types/node": "14.14.31",
     "auto": "10.16.8",
-    "chai": "^4",
+    "chai": "4",
     "commitizen": "4.2.3",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "^5.13",
-    "eslint-config-oclif": "^3.1",
-    "eslint-config-oclif-typescript": "^0.1",
+    "eslint": "7.21.0",
+    "eslint-config-oclif": "3.1",
+    "eslint-config-oclif-typescript": "0.2.0",
     "eslint-config-prettier": "8.1.0",
-    "globby": "^10",
+    "globby": "10",
     "husky": "5.1.1",
-    "mocha": "^5",
-    "nyc": "^14",
+    "mocha": "5",
+    "nyc": "14",
     "pinst": "2.1.6",
     "prettier": "2.2.1",
     "pretty-quick": "3.1.0",
-    "ts-node": "^8",
-    "typescript": "^3.3"
+    "ts-node": "9.1.1",
+    "typescript": "4.2.2 "
   },
   "engines": {
     "node": ">=8.0.0"
