--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@commitlint/config-conventional": "12.0.1",
     "@oclif/dev-cli": "1",
     "@oclif/test": "1",
+    "@tsconfig/node14": "1.0.0",
     "@types/chai": "4",
     "@types/mocha": "5",
     "@types/node": "14.14.31",
