--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
+  "extends": "@tsconfig/node14/tsconfig.json",
   "compilerOptions": {
     "declaration": true,
+    "sourceMap": true,
+    "declarationMap": true,
     "importHelpers": true,
-    "module": "commonjs",
     "outDir": "lib",
-    "rootDir": "src",
-    "strict": true,
-    "target": "es2017"
+    "rootDir": "src"
   },
   "include": ["src/**/*"]
 }
