--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backpack-cli",
+  "name": "go-bag",
   "description": "A quick CLI tool to help hotswap your machine by backing up your local setup.",
   "version": "0.0.5",
   "author": "Manu Phatak @manuphatak",
@@ -8,7 +8,7 @@
   "repository": "manuphatak/backpack-cli",
   "types": "lib/index.d.ts",
   "bin": {
-    "backpack": "./bin/run"
+    "go-bag": "./bin/run"
   },
   "bugs": "https://github.com/manuphatak/backpack-cli/issues",
   "dependencies": {
