--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "declarationMap": true,
     "importHelpers": true,
     "outDir": "lib",
-    "rootDir": "src"
+    "rootDir": "src",
+    "composite": true
   },
   "include": ["src/**/*"]
 }
