--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   },
   "bugs": "https://github.com/manuphatak/go-bag/issues",
   "dependencies": {
-    "@oclif/command": "1",
-    "@oclif/config": "1",
-    "@oclif/plugin-help": "3",
+    "@oclif/command": "1.8.0",
+    "@oclif/config": "1.17.0",
+    "@oclif/plugin-autocomplete": "0.3.0",
+    "@oclif/plugin-help": "3.2.2",
     "tslib": "2.1.0"
   },
   "devDependencies": {
@@ -23,29 +24,29 @@
     "@auto-it/first-time-contributor": "10.16.8",
     "@commitlint/cli": "12.0.1",
     "@commitlint/config-conventional": "12.0.1",
-    "@oclif/dev-cli": "1",
-    "@oclif/test": "1",
+    "@oclif/dev-cli": "1.26.0",
+    "@oclif/test": "1.2.8",
     "@tsconfig/node14": "1.0.0",
-    "@types/chai": "4",
-    "@types/mocha": "8",
+    "@types/chai": "4.2.15",
+    "@types/mocha": "8.2.1",
     "@types/node": "14.14.31",
     "auto": "10.16.8",
-    "chai": "4",
+    "chai": "4.3.3",
     "commitizen": "4.2.3",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "7.21.0",
-    "eslint-config-oclif": "3.1",
+    "eslint-config-oclif": "3.1.0",
     "eslint-config-oclif-typescript": "0.2.0",
     "eslint-config-prettier": "8.1.0",
     "globby": "11.0.2",
     "husky": "5.1.1",
-    "mocha": "8",
+    "mocha": "8.3.1",
     "nyc": "15.1.0",
     "pinst": "2.1.6",
     "prettier": "2.2.1",
     "pretty-quick": "3.1.0",
     "ts-node": "9.1.1",
-    "typescript": "4.2.2 "
+    "typescript": "4.2.2"
   },
   "engines": {
     "node": ">=8.0.0"
@@ -64,7 +65,8 @@
     "commands": "./lib/commands",
     "bin": "go-bag",
     "plugins": [
-      "@oclif/plugin-help"
+      "@oclif/plugin-help",
+      "@oclif/plugin-autocomplete"
     ]
   },
   "scripts": {
