feat: add setup command

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@oclif/config": "1.17.0",
     "@oclif/plugin-autocomplete": "0.3.0",
     "@oclif/plugin-help": "3.2.2",
+    "@types/fs-extra": "9.0.8",
+    "fs-extra": "9.1.0",
     "tslib": "2.1.0"
   },
   "devDependencies": {
@@ -45,6 +47,7 @@
     "pinst": "2.1.6",
     "prettier": "2.2.1",
     "pretty-quick": "3.1.0",
+    "rimraf": "3.0.2",
     "ts-node": "9.1.1",
     "typescript": "4.2.3"
   },
@@ -72,7 +75,9 @@
   "scripts": {
     "postpack": "rm -f oclif.manifest.json",
     "lint": "eslint . --ext .ts",
-    "prepack": "rm -rf lib && tsc -b && oclif-dev manifest && oclif-dev readme && prettier --write README.md",
+    "prepack": "yarn clean && yarn build && oclif-dev manifest && oclif-dev readme && prettier --write README.md",
+    "build": "tsc -b",
+    "clean": "rimraf lib && rimraf tsconfig.tsbuildinfo",
     "test": "COLUMNS=80 nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\"",
     "version": "oclif-dev readme && prettier --write README.md && git add README.md && git commit --allow-empty -m 'chore: Update README.md [skip ci]'",
     "postinstall": "husky install",
