--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
     "importHelpers": true,
     "outDir": "lib",
     "rootDir": "src",
-    "composite": true
+    "composite": true,
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": "./"
   },
   "include": ["src/**/*"]
 }
