feat: Create an edit command

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "rootDir": "src",
     "composite": true,
     "allowSyntheticDefaultImports": true,
-    "baseUrl": "./"
+    "baseUrl": "."
   },
   "include": ["src/**/*"]
 }
